# esps3

./: .gitignore  CMakeLists.txt  partitions.csv  push.bat  sdkconfig  sdkconfig.defaults
components/78__esp-opus/: CMakeLists.txt
main/: CMakeLists.txt  afe_wake_word.c  afe_wake_word.h  audio_in.c  audio_in.h  audio_out.c  audio_out.h  hello_pcm.h  idf_component.yml  main.c  wifi.c  wifi.h  ws_client.c  ws_client.h
