idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "audio_out.c"
        "audio_in.c"
        "ws_client.c"
        "afe_wake_word.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        driver
        esp_websocket_client
        cjson
        mbedtls
        esp-sr
)
